fix all usages of "have"

--- a/docs/language/word_types/determiners.mdx
+++ b/docs/language/word_types/determiners.mdx
@@ -135,7 +135,7 @@ Place a numeral word after (<HisyeoWord is='ônî'/>) and use this as a modifier
 represent the number of times something is to be multiplied.
 
 <HisyeoTabs>
-  <p>boholon yûnyoû zinkon ônî dûî.&emsp;<em>"The closet has double doors."</em></p>
+  <p>boholon fuî zinkon ônî dûî.&emsp;<em>"The closet has double doors."</em></p>
   <p>nîo li kîôsô êto kôî tûu zoston ônî nonkû bi obunyun.&emsp;<em>"He's quite athletic and can do quadruple jumps with ease."</em></p>
 </HisyeoTabs>
 
@@ -191,7 +191,7 @@ exact numerical quantity the noun actually is.
   <p><strong>higher/more:</strong>&emsp;li eswen tolîko yê xe tûu ôfo, en fos noyo kôî tûek tô kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;li mênûs umo hoî ôfo bi îbûdû.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoûtî umo sûko kon mûhoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî yûnyoû zôtêstô oxon xe cifû mênûs cino yê niwos en môî.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo bi tôlkî fuî zôtêstô oxon xe cifû mênûs cino yê niwos en môî.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xûnyu yê dûî umo li sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
