--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -201,7 +201,7 @@ differentiation and causation). In linguistics, this is sometimes referred to as
   <p>noyo dôstoc lîbû in lufono sûn siskin moskûl noyo.&emsp;<em>I got a letter from my brother.</em></p>
   <p>nîmû kôî dôstoc yôk fisun nêôs sûn nec ônî tûek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
   <p>tômôs ôfo sûn dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
-  <p>nîo yûnyoû sî tômôs xe hoî zomo mulô sûn sokofû mût deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
+  <p>nîo fuî sî tômôs xe hoî zomo mulô sûn sokofû mût deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
   <p>nîo li sî cok hoî lono xobêk sûn sinsî Xikogô.&emsp;<em>He departed yesterday from Chicago.</em></p>
   <p>kûu bono bi elentêt sûn bêlêtê.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wêloi sûn suhot eson mût suhot tîû.<em>The working day runs from 9 am to 5 pm.</em></p>
@@ -246,12 +246,12 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
-  <p>noyo yûnyoû uyo oxon nîmû&emsp;<em>I have something for you.</em></p>
+  <p>noyo fuî uyo oxon nîmû&emsp;<em>I have something for you.</em></p>
 </HisyeoTabs>
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
   <p>hôn môî uyo fos noyo tûu, û noyo tûu oxon nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
-  <p>nûs yûnyoû kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
+  <p>nûs fuî kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
   <p>ônî bôklôn cûdo sî kôto in ondo oxon kôndodû kon cûdo yôûlî.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
@@ -304,7 +304,7 @@ proper way to formulate the desired semantic meaning.
 13. ⛔ In the role or capacity of; instead of; in place of.
 <HisyeoTabs>
   <p>noyo yôn dîncî yê kudûdo hûlû misli mîêbil kon conzodo.&emsp;<em>I used a hay bale for a bed.</em></p>
-  <p>nîo yûnyoû ûnfûnô zîzîyo misli fos wedo dûuncît nîo oxon ni.&emsp;<em>He's got a turnip for a brain.</em></p>
+  <p>nîo fuî ûnfûnô zîzîyo misli fos wedo dûuncît nîo oxon ni.&emsp;<em>He's got a turnip for a brain.</em></p>
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
@@ -344,7 +344,7 @@ proper way to formulate the desired semantic meaning.
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
   <p>tûu kon dodê tô woyû in besol nu. hôn kut uyo û noyo kôî dodê yôk lôîcôk.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
-  <p>hôn dîzel û nûs yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
+  <p>hôn dîzel û nûs fuî yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
@@ -423,7 +423,7 @@ detail, or a condition for the underlying sentence. In English, this represents
 some of the senses of the words "regarding", "given", "as for", and "when".
 
 <HisyeoTabs>
-  <p>noyo yûnyoû sôlû hôn zuwobû ilik.&emsp;<em>"I have a question regarding your earlier answers."</em></p>
+  <p>noyo fuî sôlû hôn zuwobû ilik.&emsp;<em>"I have a question regarding your earlier answers."</em></p>
 </HisyeoTabs>
 
 Also, when you would like to utilize an adjective complement to complete the
@@ -665,10 +665,10 @@ English equivalents.
     <p>cîkînîl yê zonwul&emsp;<em>"ear belonging to an animal"</em> <small>(lit. ear of animal)</small></p>
 </HisyeoTabs>
 
-You can clarify that a genitive relationship is possessive by using <HisyeoWord is='yûnyoû'/>: 
+You can clarify that a genitive relationship is possessive by using <HisyeoWord is='fuî'/>: 
 
 <HisyeoTabs>
-    <p>cîkînîl yê yûnyoû yê zonwul&emsp;<small>(lit. ear of possession of animal)</small></p>
+    <p>cîkînîl yê fuî yê zonwul&emsp;<small>(lit. ear of possession of animal)</small></p>
 </HisyeoTabs>
 
 ---
@@ -715,10 +715,10 @@ regular modifier usage but more emphatic in its attribution.
 </HisyeoTabs>
 
 You can clarify a genitive relationship is attributive by using <HisyeoWord is='dî'/>
-alone or <HisyeoWord is='yûnyoû'/> and <HisyeoWord is='dî'/>:
+alone or <HisyeoWord is='fuî'/> and <HisyeoWord is='dî'/>:
 
 <HisyeoTabs>
-    <p>îlê yê yûnyoû yê dî kôdus&emsp;<em>(lit. building of possession of sacred trait)</em></p>
+    <p>îlê yê fuî yê dî kôdus&emsp;<em>(lit. building of possession of sacred trait)</em></p>
 </HisyeoTabs>
 
 ---
@@ -783,10 +783,10 @@ separate entity from the material of the container.
   <p>zomo xîmu yê mîcîn&emsp;<em>"lake containing fish"</em> <small>(lit. water body of fish)</small></p>
 </HisyeoTabs>
 
-You can clarify a genitive relationship is content by using <HisyeoWord is='yûnyoû'/> <HisyeoWord is='lîmîen'/>:
+You can clarify a genitive relationship is content by using <HisyeoWord is='fuî'/> <HisyeoWord is='lîmîen'/>:
 
 <HisyeoTabs>
-  <p>zomo xîmu yê yûnyoû lîmîen yê mîcîn&emsp;<small>(lit. water body of inner possession of fish)</small></p>
+  <p>zomo xîmu yê fuî lîmîen yê mîcîn&emsp;<small>(lit. water body of inner possession of fish)</small></p>
 </HisyeoTabs>
 
 You can also clarify this relationship with <HisyeoWord is='môtowo'/>:
