--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -190,7 +190,7 @@ expressed as being limited to the past, the antecedent clause is expressed as in
 the Second Conditional, while the main clause is like the Third Conditional.
 
 <HisyeoTabs>
-    <p>hôn fos nîmû bît tûu sî wêloi bi dûndon, nûs bît yûnyoû yôk îxôlô ôfo bi îbûdû.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
+    <p>hôn fos nîmû bît tûu sî wêloi bi dûndon, nûs bît fuî yôk îxôlô ôfo bi îbûdû.&emsp;<em>If you had done your job properly, we wouldn't be in this mess now.</em></p>
     <p>hôn fos noyo bît li sî êo hûnsûon ôlê umo Keli, noyo bît niwos yôk hoî kûôcyo Elvu bi îbûdû.&emsp;<em>If I hadn't married Kelly, I wouldn't be living in Scotland now.</em></p>
     <p>hôn fos nûs bît li umo gûexo bi ôhêl, nûs bît tûu sî yôk ni misli ulyô.&emsp;<em>If we were soldiers, we wouldn't have done it like that.</em></p>
 </HisyeoTabs>
