--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -157,7 +157,7 @@ accuracy.
     <p>(umo) somo umo Ootyo (mût noyo).&emsp;<em>People call me Aadhya.</em></p>
     <p>nîmû somo zik mût cizî.&emsp;<em>What do you call yourself?</em></p>
     <p>noyo somo Ismêl mût cizî.&emsp;<em>I call myself Ismail.</em></p>
-    <p>noyo yûnyoû somo dîzel ko.&emsp;<em>Do you have a nickname?</em></p>
+    <p>noyo fuî somo dîzel ko.&emsp;<em>Do you have a nickname?</em></p>
     <p>somo dîzel li umo Yûsilnên123.&emsp;<em>My nickname is UserName123.</em></p>
 </HisyeoTabs>
 
@@ -239,7 +239,7 @@ participate. If not, you should respectfully decline the offer.
     <p>(noyo) wofok kon xokûlû nîmû.&emsp;<em>I accept your invitation.</em></p>
     <p>(noyo) kûu wofok yôk kon xokûlû nîmû nênko fos môî motûo (li gô) hoî sinsî onô.&emsp;<em>I must decline your invitation because my parents are in town.</em></p>
     <p>li xoînbo û fos ulyô li foko xowosê.&emsp;<em>That sounds like fun!</em></p>
-    <p>(noyo) ke yûnyoû yôk zîcoû yê xe (li gô) hoî ulyô, hoî lono ulyô.&emsp;<em>I won't be able to make it on that day.</em></p>
+    <p>(noyo) ke fuî yôk zîcoû yê xe (li gô) hoî ulyô, hoî lono ulyô.&emsp;<em>I won't be able to make it on that day.</em></p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
