--- a/docs/lessons/home-and-country.mdx
+++ b/docs/lessons/home-and-country.mdx
@@ -231,8 +231,8 @@ ask someone of their citizenship.
 
 <HisyeoTabs>
     <p>nîmû li kukwon yê kûôcyo Yûnoitit Sitêtsu ko.&emsp;<em>Are you a US citizen?</em></p>
-    <p>nîo yûnyoû kon kukwon nîo yê kûôcyo Êlînîkî ko.&emsp;<em>Do they have their Greek citizenship?</em></p>
-    <p>noyo yûnyoû dûî kon kukwon yê kûôcyo Kenudu ûn kûôcyo Ustulêilyu.&emsp;<em>I have dual Canadian and Australian citizenship.</em></p>
+    <p>nîo fuî kon kukwon nîo yê kûôcyo Êlînîkî ko.&emsp;<em>Do they have their Greek citizenship?</em></p>
+    <p>noyo fuî dûî kon kukwon yê kûôcyo Kenudu ûn kûôcyo Ustulêilyu.&emsp;<em>I have dual Canadian and Australian citizenship.</em></p>
     <p>nûs lufono golo fos sôlû oxon xe li kukwon yê kûôcyo Ûkluyînu. &emsp;<em>We are applying to be Ukrainian citizens.</em></p>
 </HisyeoTabs>
 
