--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -317,12 +317,12 @@ WIP Translation
 :::
 
 <HisyeoTabs>
-  <p>yûnyoû niswî dus lono û wuto eson,</p>
+  <p>fuî niswî dus lono û wuto eson,</p>
   <p>wuto nonkû, wuto toû, ûn wuto ônsu,</p>
-  <p>û môî dîzel yûnyoû niswî dus kut,</p>
+  <p>û môî dîzel fuî niswî dus kut,</p>
   <p>û yôk wuto dûî xe lon dûî dus tukwos lono,</p>
   <p>lêkin hoî ûsên zoston xe dî hoî xokôn ûsên nonkû,</p>
-  <p>û wuto dûî yûnyoû eswen kut lono</p>
+  <p>û wuto dûî fuî eswen kut lono</p>
 </HisyeoTabs>
 
 [Wikipedia](https://en.wikipedia.org/wiki/Thirty_Days_Hath_September)
@@ -398,10 +398,10 @@ to return to the main sentence clause for the remaining consituents.
     <TabItem value="latin" label="Latin" default>
       <dl>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='latin'>noî Lovoiyel, nîmû yûnyoû mîkdol zik yê siskin.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>noî Lovoiyel, nîmû fuî mîkdol zik yê siskin.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='latin'>noyo yûnyoû dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
+        <dd><HisyeoText kind='latin'>noyo fuî dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd><HisyeoText kind='latin'>nîo li nokdo zik.</HisyeoText></dd>
@@ -422,10 +422,10 @@ to return to the main sentence clause for the remaining consituents.
     <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
       <dl>
         <dt>Malina</dt>
-        <dd><HisyeoText kind='abugida'>noî Lovoiyel, nîmû yûnyoû mîkdol zik yê siskin.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>noî Lovoiyel, nîmû fuî mîkdol zik yê siskin.</HisyeoText></dd>
         <dd><em>Raphael, how many siblings do you have?</em></dd>
         <dt>Lovoiyel</dt>
-        <dd><HisyeoText kind='abugida'>noyo yûnyoû dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
+        <dd><HisyeoText kind='abugida'>noyo fuî dûî siskin moskûl ûn kut siskin wohî.</HisyeoText></dd>
         <dd><em>I have two brothers and one sister.</em></dd>
         <dt>Malina</dt>
         <dd><HisyeoText kind='abugida'>nîo li nokdo zik.</HisyeoText></dd>
@@ -512,7 +512,7 @@ normal approach for creating plurality: provide the number words in the
 determiner slot (left side of the head word).
 
 <HisyeoTabs>
-  <p>nîmû yûnyoû niswî suhot&emsp;<em>"You have three hours"</em></p>
+  <p>nîmû fuî niswî suhot&emsp;<em>"You have three hours"</em></p>
   <p>tûu ulyô buswen kut suhot&emsp;<em>"That task needs an hour"</em></p>
 </HisyeoTabs>
 
@@ -613,7 +613,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hôn tûek yê wêîlun û cingî mêtlîôs yûnyoû zôtêstô len oxon xe êo nô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut sûnkon.</p>
+  <p>hôn tûek yê wêîlun û cingî mêtlîôs fuî zôtêstô len oxon xe êo nô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut sûnkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
