--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -76,7 +76,7 @@ management for the good of all. Learn more about Tîengûun
 <HisyeoTabs>
     <p>ônî hobîyô: ¿zik li mutyu onô?&emsp;<em>Facilitator: Who is the center?</em></p>
     <p>môî: wutun onô li mutyu onô.&emsp;<em>All: The circle is the center.</em></p>
-    <p>ônî hobîyô: ¿zik yûnyoû kon hûkun?&emsp;<em>Facilitator: Who holds the power?</em></p>
+    <p>ônî hobîyô: ¿zik fuî kon hûkun?&emsp;<em>Facilitator: Who holds the power?</em></p>
     <p>môî: zûngô onô fos môtsilê.&emsp;<em>All: The hands that are woven.</em></p>
     <p>ônî hobîyô: ¿zik li môtîfô nûs?&emsp;<em>Facilitator: What is our purpose?</em></p>
     <p>môî: xe môtsilê môî doî bêsu mût bolce sunbûlno.&emsp;<em>All: To weave all different threads into the perfect fabric.</em></p>
@@ -105,7 +105,7 @@ more about Unonsî here. Learn more about Unonsî [here](/docs/religion/gods/uno
     <p>zûngô bôsol yôn (zûngô mût lozîdô)&emsp;<em>The hand shapes the tool, (Hand to heart)</em></p>
     <p>û yôn bi nêôs bôsol nucoto. (zûngô dî but mût nucoto)&emsp;<em>The tool reshapes the world. (Hand opens to the world)</em></p>
     <p>tifûlci ûn kon xîûfû, (dûî zûngô mût wîk)&emsp;<em>Innovation and maintenance,</em></p>
-    <p>kon yûnyoû fîmôsyôs yê môî kuûnmê, (dûî zûngô mût lozîdô)&emsp;<em>Shared ownership of all technology,</em></p>
+    <p>kon fuî fîmôsyôs yê môî kuûnmê, (dûî zûngô mût lozîdô)&emsp;<em>Shared ownership of all technology,</em></p>
     <p>kônên sumon oxon xokôn kûngîyo yê umo kon wêloi. (dûî zûngô dî but mût nucoto)&emsp;<em>Equal opportunity for every worker council.</em></p>
     <p>lûcku ôfo mût nûs kûu cûdo fôlnî yê êto eswen, (kûu ogolol lûcku dês dêko hoî fôhon kûu cîhun)&emsp;<em>May this lever bring us greater freedom, (Grab an invisible lever in front of you and pull)</em></p>
     <p>hôn xe cînlî zîwit, hôn xe wêîlun bi ozûul cî. (bi dûî kûu ogolol lûcku dês dêko hoî fôhon kûu cîhun)&emsp;<em>to experience life and act any which way. (Twice grab an invisible lever in front of you and pull)</em></p>
@@ -198,7 +198,7 @@ to be respected and collaborated with. Learn more about Dimîtu
     <p>tolên gos dî kûôxi; kûôxi dî côûfon.&emsp;<em>The stalk becomes the fruit, the fruit becomes the meal.</em></p>
     <p>û côûfon dî solîlo nûs; solîlo nûs dî gêkô.&emsp;<em>The meal becomes our body, our body becomes the soil.</em></p>
     <p>gêkô dî oûdî.&emsp;<em>The soil becomes the seed.</em></p>
-    <p>nûs yûnyoû yôk bûmî onô; bûmî onô yûnyoû nûs.&emsp;<em>We do not own this land; we are owned by it.</em></p>
+    <p>nûs fuî yôk bûmî onô; bûmî onô fuî nûs.&emsp;<em>We do not own this land; we are owned by it.</em></p>
     <p>nûs li kut kukwon yê cûnfû hofîn muîlô êto onô.&emsp;<em>We are one part of the great, messy, beautiful cycle.</em></p>
     <p>kûu helgo mîstu nênko fos ni bi ûtok li kon nîôk.&emsp;<em>Praise the rot, for it is also growth.</em></p>
 </HisyeoTabs>
@@ -314,7 +314,7 @@ free society is impossible. Learn more about Xôcibîlî
     <p>noyo li nôkso cosnî noyo, toswîl ni.&emsp;<em>I am my own map, and I am drawing it.</em></p>
     <p>noyo li fûtsûn cosnî noyo, cukto ni&emsp;<em>I am my own law, and I am writing it.</em></p>
     <p>û dî gonzîl noyo li yôk foût; ni li ostok yê fos li noyo û.&emsp;<em>My quirks are not flaws; they are a sign of who I am.</em></p>
-    <p>kon tîkêl noyo li yûnyoû noyo hôn xe fisun.&emsp;<em>My reflection is my own to know.</em></p>
+    <p>kon tîkêl noyo li fuî noyo hôn xe fisun.&emsp;<em>My reflection is my own to know.</em></p>
     <p>&emsp;<em>I will not be folded, filed, or flattened.</em></p>
     <p>&emsp;<em>My path is not for others to walk.</em></p>
 </HisyeoTabs>
