--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -100,7 +100,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûldû onô yê doî li sî tuluti sokofû bi tulkolyun.&emsp;<em>The spool of thread rolled across the floor.</em></p>
 <p>dibo yê gos xe lîun, li sî totsi hoî kûmun obokî.&emsp;<em>A box of growing plants stood in the Window.</em></p>
 <p>noyo li xowosê êto.&emsp;<em>I am very happy.</em></p>
-<p>kûôxi nomû zîngu ôfo yûnyoû êto môtowo yê îskô kûôxi.&emsp;<em>These oranges are juicy.</em></p>
+<p>kûôxi nomû zîngu ôfo fuî êto môtowo yê îskô kûôxi.&emsp;<em>These oranges are juicy.</em></p>
 <p>xîmu xômûtlô li xôboî.&emsp;<em>Sea water is salty.</em></p>
 <p>tîton onô li mûlû yê umo.&emsp;<em>The streets are full of people.</em></p>
 <p>bôlfêlê sûît sobôlê êo sûît.&emsp;<em>Sugar tastes sweet.</em></p>
@@ -126,7 +126,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûu li cok ofek nûs.&emsp;<em>Come with us.</em></p>
 <p>kûu okôt sûtûô nîmû ofek nîmû.&emsp;<em>Bring your friends with you.</em></p>
 <p>kûu dîyondê bi cônkôk.&emsp;<em>Be careful.</em></p>
-<p>kûu yûnyoû yoûtî îskô hôncôû.&emsp;<em>Have some tea.</em></p>
+<p>kûu fuî yoûtî îskô hôncôû.&emsp;<em>Have some tea.</em></p>
 <p>umo Bipu ûn zowo nîo li sî sûtûô êto.&emsp;<em>Pip and his dog were great friends.</em></p>
 <p>umo Zon ûn umo Ilisopet li siskin.&emsp;<em>John and Elizabeth are brother and sister.</em></p>
 <p>nîmû ûn noyo ke li nô ofek xokôn dîzel.&emsp;<em>You and I will go together.</em></p>
@@ -166,7 +166,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>xûto onô fisun tîton onô mût xômûtlô.&emsp;<em>The river knows the way to the sea.</em></p>
 <p>oûtô xîmu li nô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
 <p>nîo dêko sî bi êto dîyondê hoî môî ûnhilun lêkin dêko yôk uyo.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
-<p>niwos cûtî yûnyoû sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
+<p>niwos cûtî fuî sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
 <p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>nûs bêûdo uyo nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
 <p>socok gubuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
@@ -204,7 +204,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>umo moskûl xonluk onô xe okôt sî tômôs onô, li sî cok.&emsp;<em>The boy who brought the book has gone.</em></p>
 <p>ôfo li înbolî onô fos nîo li sî êo kôlmûdul ôlê ni.&emsp;<em>These are the flowers that you ordered.</em></p>
 <p>noyo nocîdo sî tômôs onô fos nîo mût noyo cûdo ni.&emsp;<em>I have lost the book that you gave me.</em></p>
-<p>ônî wêtodû mîcîn xe yûnyoû oûtô xîmu onô, hoî îbûdû bi len sôlû cifû.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
+<p>ônî wêtodû mîcîn xe fuî oûtô xîmu onô, hoî îbûdû bi len sôlû cifû.&emsp;<em>The fisherman who owned the boat now demanded payment.</em></p>
 <p>kûu li gîk hoî fos nîmû li xokûlû.&emsp;<em>Come when you are called.</em></p>
 <p>noyo ke li gô hoî niwos noyo hôn hûzon.&emsp;<em>I shall stay at home if it rains.</em></p>
 <p>hôn fos nîo dêko noyo, nîo nîltûgu sî.&emsp;<em>When he saw me, he stopped.</em></p>
@@ -212,7 +212,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo bi îlxîzuk ke cûdo tômôs onô fos nîmû buswen ni.&emsp;<em>I shall lend you the books that you need.</em></p>
 <p>kûu li gîk hoî lono xolxîlî uklo hêlxun hôn fos nîmû kôî li gîk.&emsp;<em>Come early next Monday if you can.</em></p>
 <p>hôn fos nîmû li gîk bi hêlxun, kûu motsi hoî tîton kûncîen.&emsp;<em>If you come early, wait in the hall.</em></p>
-<p>noyo yûnyoû sî siskin moskûl yê xonluk eswen et Ontônîô.&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
+<p>noyo fuî sî siskin moskûl yê xonluk eswen et Ontônîô.&emsp;<em>I had a younger brother whose name was Antonio.</em></p>
 <p>li umo cûtî Gunôn xe niwos bûmî sêl.&emsp;<em>Gnomes are little men who live under the ground.</em></p>
 <p>xokôn umo yûbik nîo nênko wêîlun xêntîl nîo.&emsp;<em>He is loved by everybody, because he has a gentle disposition.</em></p>
 <p>kûu ogolol kûdu onô bînê noyo kôî li nô ogolol ôntôn wîk noyo.&emsp;<em>Hold the horse while I run and get my cap.</em></p>
@@ -222,9 +222,9 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nîo wohî li iwotê eswen en siskin moskûl nîo.&emsp;<em>She is taller than her brother.</em></p>
 <p>nîo li yôk colot eswen en nûs.&emsp;<em>They are no wiser than we.</em></p>
 <p>kûon tuluti bi fîkî eswen en tenkîn.&emsp;<em>Light travels faster than sound.</em></p>
-<p>nûs yûnyoû wokût eswen en nîo.&emsp;<em>We have more time than they.</em></p>
-<p>nîo yûnyoû sûtûô eswen en umo xe dên nîo.&emsp;<em>She has more friends than enemies.</em></p>
-<p>nîo yûnyoû munî yê cûtî êto ûn ofek hûnsûon nîo ûn tîû mênyûu niwos boxô sêl cûtî yê môkôfo nomû ûn îbûwê.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
+<p>nûs fuî wokût eswen en nîo.&emsp;<em>We have more time than they.</em></p>
+<p>nîo fuî sûtûô eswen en umo xe dên nîo.&emsp;<em>She has more friends than enemies.</em></p>
+<p>nîo fuî munî yê cûtî êto ûn ofek hûnsûon nîo ûn tîû mênyûu niwos boxô sêl cûtî yê môkôfo nomû ûn îbûwê.&emsp;<em>He was very poor, and with his wife and five children lived in a little low cabin of logs and stones.</em></p>
 <p>hoî fos woyû ûslêk sî, ônî tuluti onô ôlê ôntôn lîbû ûnhilun sî nîo bi fêlkonô eswen.&emsp;<em>When the wind blew, the traveler wrapped his mantle more closely around him.</em></p>
 <p>noyo li gufis hôn fos nûs kôî li nô.&emsp;<em>I am sure that we can go.</em></p>
 <p>nûs li sî dukwêlit mût boxô fos nûs dêko sî înbolî onô hoî.&emsp;<em>We went back to the place where we saw the roses.</em></p>
@@ -233,7 +233,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>û gonîso noyo li fos ônî bôklôn ke cûdo yûnlôn mût nîo.&emsp;<em>My opinion is that the governor will grant him a pardon.</em></p>
 <p>môtîfô fos nîo li cok sî sûn sinsî, li nosô.&emsp;<em>Why he has left the city is a mystery.</em></p>
 <p>û niwos onô li totsi hoî fos niswî tîton monodo môî dîzel.&emsp;<em>The house stands where three roads meet.</em></p>
-<p>nîo yûnyoû êto eswen munî en dûuncît.&emsp;<em>He has far more money than brains.</em></p>
+<p>nîo fuî êto eswen munî en dûuncît.&emsp;<em>He has far more money than brains.</em></p>
 <p>bi wuktomû û zinkon ulyô hoî xûnyu wokût li but hôn hûlû iwotê ûn gos cênbô li sî nîôk fêlkonô dên ni.&emsp;<em>Evidently that gate is never opened, for the long grass and the great hemlocks grow close against it.</em></p>
 <p>noyo monodo sî umo yê niwos cûtî et cûtî; fos nîo li nokdo yê tukwos ûsên, li fos nîo kôto sî.&emsp;<em>I met a little cottage girl; she was eight years old, she said.</em></p>
 </HisyeoTabs>
