--- a/docs/works/wicked-prince.mdx
+++ b/docs/works/wicked-prince.mdx
@@ -14,7 +14,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
 
 <HisyeoTabs>
     <p>niwos hoî kut wokût ôhêl û mênyûu moskûl yê hondon kon bôklôn et nîecni
-    xe yûnyoû sî lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû môî kûôcyo yê
+    xe fuî sî lozîdô ûn dûuncît xe gôcîdon sî xe bi gûexo obûlû môî kûôcyo yê
     nucoto onô ûn cihôû xe li êo ôsôlê ôlê umo onô, û nîo moskûl li êo kobût
     mûlû ôlê kûôcyo nîo tô môtô ûn leknek kon wêtû kîldo ûn ônî oklumun yê nîo
     moskûl li êo botuk ôlê gos hoî comen onô li êo kobût mûlû ôlê niwos yê umo
@@ -29,7 +29,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     li sî tîton bunxin tôlkî fos uyo kûu cînlî. ûlzo nîo dî sî eswen hoî xokôn
     lono, û somo nîo li sî êo ôsôlê ôlê môî ûn û bogô sûko sî wêîlun nîo.</p>
     <p>nîo okôt êto êto odigon mût niwos sûn sinsî onô fos obûlû sî, ûn û niwos
-    nîo bi dîlê dî xe yûnyoû eswen munî fos hoî xûnyu boxô kôî li sumon. nîo
+    nîo bi dîlê dî xe fuî eswen munî fos hoî xûnyu boxô kôî li sumon. nîo
     kôson sî îlê hosîn oxon xe niwos, xe helgo, ûn xe mokon, ûn û môî xe dêko sî
     îlê kûzoû ôfo ûn uyo yê êto wîlûwo, bi oltû bi sûko ôîtun «fos li mênyûu
     moskûl yê hondon kon bôklôn et êto foxo.» lêkin û nîo fisun yôk fos nîo
@@ -37,7 +37,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     ôîtun kûyô xe dî cên sûn folo îlê yê sinsî yê kobût mûlû et onô.</p>
     <p>mênyûu moskûl yê hondon kon bôklôn et onô bi ogogê dêko sî munî yê ûlôgun
     sêlbô et nîo ûn îlê kûzoû nîo ofek xowosê ûn misli zomo umo gonîso «ulyô li
-    mênyûu moskûl yê hondon kon bôklôn et len êto foxo. lêkin û noyo kûu yûnyoû
+    mênyûu moskûl yê hondon kon bôklôn et len êto foxo. lêkin û noyo kûu fuî
     eswen — êto eswen. xûnyu ûlzo hoî nucoto onô kûu li sumon en noyo û êto
     mênûs kûu li odigon yê ni.»</p>
     <p>nîo moskûl li sî êo gûexo dên môî kûôcyo uklo nîo li sî êo funsût ôlê
@@ -55,7 +55,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     <p>«bînê,» li fos mênyûu moskûl yê hondon kon bôklôn kôto sî. «û noyo ke li
     bîlûs dên ôtsôtot nûs bi ûtok lôîcôk.» ûn hôn odigon ûncoî yê nîo moskûl ûn
     îmon gôwo û nîo moskûl hûkun sî fos kôson sî oûtô yê hosîn êto et fos tô onô
-    û nîo moskûl kôî oûtô tô woyû hoî okoxu; ni yûnyoû êto yogô hosîn yê êto
+    û nîo moskûl kôî oûtô tô woyû hoî okoxu; ni fuî êto yogô hosîn yê êto
     longi; misli bûntût onô yê tîmîok hônyo yê bûntût towê yê êto longi doknû ni
     û kut elfû gûêyû lêkin xokôn gûêyû li sî môkôfo yê bûndûkî. mênyûu moskûl yê
     hondon kon bôklôn et onô sityo sî mutyu yê oûtô onô ûn tô kut kon okûlo yê
@@ -65,7 +65,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     nucoto onô li sî gô bi zelen hoî sêl mônbili ûn li sî xoînbo în dêko ofek
     tôxûtsi bûmî cênbô ni ûn bîômu nomû ni misli comen kûkmut fos û oûtô comen
     li sî êo kûmun bûmî gîto gitno comen lûntî hoî; bi zelen û ni li xoînbo în
-    dêko tôlkî misli nôkso xe yûnyoû gîto êmê hoî okûlo ni; bi kônyêc ôlê ni bi
+    dêko tôlkî misli nôkso xe fuî gîto êmê hoî okûlo ni; bi kônyêc ôlê ni bi
     mûlû li sî fonmot hoî lîmîen yê xîmu fildonbun ûn wôlik. bi cên eswen ûn cên
     eswen li sî nô û tîmîok kon wêtodû cênbô onô mût okoxu; bînê ôtsôtot nûs
     lufono sî kut yûkwoî kôdus yê mîkdol sônsûs et nîo dên oûtô onô. mênyûu
@@ -100,7 +100,7 @@ Andersen](https://en.wikipedia.org/wiki/Hans_Christian_Andersen)
     nîo moskûl sûn ônî ogolol ni ondo sî xe kôs oklumun lêkin û nîo moskûl bi
     tôlkî okûlo sî woyû onô xobo sî yôk mûxî onô. bînê nîo moskûl hûkun sî fos
     foko yoldûn yê nîo moskûl okôt ônî doknû yê êto wîlûwo doknû nîo moskûl tô
-    ni oxon fos mûxî onô cihôû îbûdû kôî yûnyoû yôk zîcoû onô yê xe li gîk sî
+    ni oxon fos mûxî onô cihôû îbûdû kôî fuî yôk zîcoû onô yê xe li gîk sî
     hoî nîo moskûl. foko yoldûn onô fûtsûn sî hûkun yê nîo moskûl lêkin kut mûxî
     ônî kut wêko sî cizî ni hoî lîmîen yê kut ônî doknû onô li sî nô bomoge
     homûs mût cîkînîl yê mênyûu moskûl yê hondon kon bôklôn et onô dûngo sî nîo
