fix usages of changed word

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -613,7 +613,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hôn tûek yê wêîlun û cingî mêtlîôs fuî zôtêstô len oxon xe êo nô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut sûnkon.</p>
+  <p>hôn tûek yê wêîlun û cingî mêtlîôs fuî zôtêstô len oxon xe êo nô bi mulô ôlê fîyên folo zênsî înbolî lon toû ônî kut cûtî yê kîldo hoî mênûs en kut mîoû.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
