--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -737,7 +737,7 @@ common compounds that are used in day-to-day speech.
     <p>mûxî xîkô&emsp;<strong>mogi:</strong> <em>fly, gnat</em></p>
     <p>mûxî xîkô yê kon îskô luhû&emsp;<strong>mogi:</strong> <em>mosquito</em></p>
     <p>îskô hôktun&emsp;<strong>moloko:</strong> <em>milk, milky</em></p>
-    <p>sûnkon&emsp;<strong>momen¹:</strong> <em>moment, instant, instantaneous</em></p>
+    <p>mîoû&emsp;<strong>momen¹:</strong> <em>moment, instant, instantaneous</em></p>
     <p>îbûdû&emsp;<strong>momen²:</strong> <em>immediate</em></p>
     <p>wuto&emsp;<strong>monato:</strong> <em>month, monthly</em></p>
     <p>fonolon&emsp;<strong>monki:</strong> <em>monkey, gorilla, chimpanzee</em></p>
@@ -1115,7 +1115,7 @@ common compounds that are used in day-to-day speech.
     <p>nosô&emsp;<strong>seketa:</strong> <em>secret, mystery</em></p>
     <p>ûlgûkîn&emsp;<strong>seko:</strong> <em>dry, dryness</em></p>
     <p>îlê kon bêûdo&emsp;<strong>sekola:</strong> <em>school</em></p>
-    <p>sûnkon&emsp;<strong>sekon:</strong> <em>second (time)</em></p>
+    <p>mîoû&emsp;<strong>sekon:</strong> <em>second (time)</em></p>
     <p>xe li êo mefûs&emsp;<strong>sekura¹:</strong> <em>secure</em></p>
     <p>mefûs&emsp;<strong>sekura²:</strong> <em>safe, safety, security</em></p>
     <p>kûlûnun&emsp;<strong>sela:</strong> <em>cell (biology + room)</em></p>
